@@ -246,7 +246,9 @@ bool on_alert(alert* a)
 	return false;
 }
 
-void test_transfer(int proxy_type, bool test_disk_full = false, bool test_allowed_fast = false, bool test_priorities = false)
+void test_transfer(int proxy_type, bool test_disk_full = false
+	, bool test_allowed_fast = false, bool test_priorities = false
+	, storage_mode_t storage_mode = storage_mode_sparse)
 {
 
 	char const* test_name[] = {"no", "SOCKS4", "SOCKS5", "SOCKS5 password", "HTTP", "HTTP password"};
@@ -349,6 +351,9 @@ void test_transfer(int proxy_type, bool test_disk_full = false, bool test_allowe
 	addp.flags &= ~add_torrent_params::flag_paused;
 	addp.flags &= ~add_torrent_params::flag_auto_managed;
 
+	add_torrent_params params;
+	params.storage_mode = storage_mode;
+
 	wait_for_listen(ses1, "ses1");
 	wait_for_listen(ses2, "ses2");
 
@@ -356,7 +361,7 @@ void test_transfer(int proxy_type, bool test_disk_full = false, bool test_allowe
 
 	// test using piece sizes smaller than 16kB
 	boost::tie(tor1, tor2, ignore) = setup_transfer(&ses1, &ses2, 0
-		, true, false, true, "_transfer", 8 * 1024, &t, false, test_disk_full?&addp:0);
+		, true, false, true, "_transfer", 8 * 1024, &t, false, test_disk_full?&addp:&params);
 
 	int num_pieces = tor2.get_torrent_info().num_pieces();
 	std::vector<int> priorities(num_pieces, 1);
@@ -639,6 +644,15 @@ int test_main()
 	
 	// test allowed fast
 	test_transfer(0, false, true, true);
+
+	// test storage_mode_allocate
+	fprintf(stderr, "full allocation mode\n");
+	test_transfer(0, false, false, false, storage_mode_allocate);
+
+#ifndef TORRENT_NO_DEPRECATE
+	fprintf(stderr, "compact mode\n");
+	test_transfer(0, false, false, false, storage_mode_compact);
+#endif
 	
 	error_code ec;
 	remove_all("tmp1_transfer", ec);
