@@ -1,3 +1,4 @@
+	* fix crash when using full allocation storage mode
 	* improve error_code and error_category support in python bindings
 	* fix python binding for external_ip_alert
 
